# DataWarehouse-Explorer

./: .gitignore  DataWarehouse_Web.py  DeepSeek_DataV4.py  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt  test_v3_imports.py
datawarehouse/: __init__.py  cli.py  config.py  ingestor.py  license_report.py  metadb.py  models.py  orm.py  parquet_converter.py  pipeline.py  query.py  storage.py  tasks.py  utils.py  validator.py
datawarehouse/ai/: __init__.py  llm_client.py  schema_inferrer.py  text_to_sql.py
datawarehouse/ingestion/: __init__.py  dlt_loader.py  playwright_fetcher.py  proxy_pool.py
datawarehouse/storage/: __init__.py  duckdb_engine.py  minio_client.py
datawarehouse/web/: __init__.py  auth.py  routes.py
datawarehouse/web/static/css/: style.css
datawarehouse/web/static/js/: app.js  charts.js
datawarehouse/web/templates/: index.html
docs/: API.md  CONFIGURATION.md
tests/: conftest.py  test_validator.py  test_web_api.py
