[project]
name = "datawarehouse-explorer"
version = "2.0.0"
description = "Personal Offline Data Warehouse Builder — automated pipeline + interactive web viewer"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "symmetryseeker"}]
requires-python = ">=3.10"
keywords = ["data-warehouse", "datasets", "open-data", "web-viewer", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "colorama>=0.4",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-flask>=1.3",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
